--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Sai Kumar Aili
+logo: /assets/img/logo.png
 description: An adaptable, observant and resilient Data Enthusiast - Motivated to connect data to dollar.
 show_downloads: false
 google_analytics:
